# imhpa-api

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  scraper.py
notebooks/: DataCleaning.ipynb  Example.ipynb
pipelines/: ingest_raw.py
src/imhpa/: __init__.py  client.py  constants.py
