[project]
name = "imhpa-api"
version = "0.0.1"
description = "API wrapper for IMHPA data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datetime>=6.0",
    "fastapi>=0.128.5",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "polars>=1.38.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "uvicorn>=0.40.0",
]
