[project]
name = "imhpa-api"
version = "0.0.1"
description = "API wrapper for IMHPA data"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datetime>=6.0",
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
